ch8 css fix - spacing

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -75,7 +75,7 @@ table {
 	border-collapse: collapse;
 }
 td, th {
-	padding: 0.5 em;
+	padding: 0.65 em;
 	border: 1px solid #00008B;
 }
 
